update content and add button

--- a/index.html
+++ b/index.html
@@ -164,31 +164,32 @@
           <h4>端傳媒會員優惠：中文書九折，英文書九五折</h4>
         </div>
       </div>
+      <div class="row">
+        <a class="subscribe" href="https://initiummall.com/products/initium-vip-1?utm_source=membership.theinitium.com&utm_medium=buy_button" target="_blank">成為會員</a>
+        <p class="price">299HKD/年</p>
+      </div>
       <div class="intro">
+        <br>
         <p>
-          端一直希望記錄時代的漩渦。
+          我們遇上了困難。財務危機，令我們不得不暫時減少產量，很多優秀的同事也不得不離開團隊。端正在經歷一場巨大的變動，橫亙在我們面前的，是看起來無解的難關。
         </p>
         <p>
-          我們把每一個新聞片段都看作正在快速消逝歷史的一部分，想在時代的背景畫面中，找到它的位置，明瞭它的含義，看懂它的指向。這許許多多的新聞碎片，因此可以串聯成一幅有意義的圖景，讓身在其中的人們，知道自己所經歷其實並不孤單，做出每一個選擇和判斷時，也有了對周遭世界的認知基礎。
+          我們想找到你們，我們需要你們的支持。
         </p>
         <p>
-          事實上，這並不只是一個人，或者某一個小團體的工作。它原本就是一個更廣泛的參與過程，身處這時代不同位置的人，都分享對世界的熱情和理解它的過程，正如我們過去廣泛尋找全世界的創作者、撰稿人、意見提供者以及讀者，一起建構端時，希望努力的那樣。
+          我們跌倒了，沒有讓好內容到達更多人、沒把好品牌變成好價錢，是端自己的失誤；我們不怪市場、不怪讀者：新媒體的商業模式和優質內容一樣，都需要精耕細作，對市場和讀者，必須抱持同樣的敬意，這是我們學到的一堂課。
         </p>
         <p>
-        上線十九個月以來，我們有幸能夠跟數千位華語世界的優秀創作者一道，在這個平台上記錄我們所身處的時代，並跟數以百萬計來自世界各地的讀者坦誠交流。
+        我們會帶著它持續前行，航向下一段旅程。
         </p>
         <p>
-        我們想找到你們，需要你們的支持；我們更想創造一個空間，讓你們找到彼此。
+        對新聞人來說，這是個嚴峻的時代：無論政治或資本，都在用「公關」掉包「真相」；機器和算法步步為營，從採集、編寫到分發，用「資訊」取代「報導」；而當權力和技術兩頭包抄時，讀者們不知不覺地被趕進過濾氣泡，用「觀點」洗刷「事實」。
         </p>
-        <p>自由的道路漫長，我們一起開端。</p>
+        <p>可是我們不願意讓真相、報導和事實，就此躲進陽光照不到的角落。</p>
+        <p>上線二十個月，我們和數千位華語世界的優秀創作者一起，將許多這樣的故事，帶給了全球數以百萬計的讀者。與時代逆行，是一份極昂貴的理想。做嚴肅、深度的報導很難，聚攏跨地域、無固定族群的讀者更難。但我們一定會繼續走下去，無論這條路有多少阻礙。</p>
+        <p>理想主義不能當飯吃，但我們想與你一起努力，給理想主義掙一口飯吃。加入我們的會員計劃，讓我們並肩同行。</p>
       </div>
       <hr>
-      <div class="midtitle">
-        <h1>全球華語智識人文聯盟</h1>
-        <h1>跨越世代和同溫層的對話</h1>
-        <h1>華語世界頭腦最開放的一群人</h1>
-      </div>
-      <img src="img/logo_b.png" class="logob">
       <div class="plansrow">
         <div class="plan">
           <div class="illustration"><img src="img/illus1.png" alt=""></div>
@@ -207,7 +208,6 @@
                 <li>會員定制福袋一套（頭200位會員限定）</li>
                 <li><a class="giftlink" href="index.html#q1">更多信息</a></li>
               </ul>
-
         </div>
       </div>
       <div class="row">
