--- a/index.html
+++ b/index.html
@@ -170,43 +170,39 @@
       </div>
       <div class="intro">
         <br>
-        <p>
-          我們遇上了困難。財務危機，令我們不得不暫時減少產量，很多優秀的同事也不得不離開團隊。端正在經歷一場巨大的變動，橫亙在我們面前的，是看起來無解的難關。
-        </p>
-        <p>
-          我們想找到你們，我們需要你們的支持。
-        </p>
-        <p>
-          我們跌倒了，沒有讓好內容到達更多人、沒把好品牌變成好價錢，是端自己的失誤；我們不怪市場、不怪讀者：新媒體的商業模式和優質內容一樣，都需要精耕細作，對市場和讀者，必須抱持同樣的敬意，這是我們學到的一堂課。
-        </p>
-        <p>
-        我們會帶著它持續前行，航向下一段旅程。
-        </p>
-        <p>
-        對新聞人來說，這是個嚴峻的時代：無論政治或資本，都在用「公關」掉包「真相」；機器和算法步步為營，從採集、編寫到分發，用「資訊」取代「報導」；而當權力和技術兩頭包抄時，讀者們不知不覺地被趕進過濾氣泡，用「觀點」洗刷「事實」。
-        </p>
-        <p>可是我們不願意讓真相、報導和事實，就此躲進陽光照不到的角落。</p>
-        <p>上線二十個月，我們和數千位華語世界的優秀創作者一起，將許多這樣的故事，帶給了全球數以百萬計的讀者。與時代逆行，是一份極昂貴的理想。做嚴肅、深度的報導很難，聚攏跨地域、無固定族群的讀者更難。但我們一定會繼續走下去，無論這條路有多少阻礙。</p>
-        <p>理想主義不能當飯吃，但我們想與你一起努力，給理想主義掙一口飯吃。加入我們的會員計劃，讓我們並肩同行。</p>
+        <p>為了聽音樂，你願意每月支出 50 港幣購買音樂 App 的套餐；為了收看影視劇集，你也會每月花費 500 港幣，買下電視台的高清基本組合。</p>
+        <p>買一本紙製書，大約需要 100 港幣；訂閱一份報紙加一本雜誌，每月你願意撥出 300 港幣的預算。但當你打算為新媒體內容付費埋單時，你猶豫了……</p>
+        <p>音樂有償、劇集有價，書報雜誌值得掏錢，新媒體內容呢？免費獲取成了習慣，習慣又漸漸成了常識。而在這常識背後，媒體被流量紅海與廣告利益宰制，記者緊盯點擊率，編輯憂心觸及率，而每個讀者都成為「大數據」背後可以被輕易壓榨的犧牲品。</p>
+        <p>我們，想要在內容成長、作者及讀者長期價值之間，找出新的平衡方程式。</p>
+        <p>你的參與，將會是方程式的唯一解。更坦誠地說，我們需要你付費支持端傳媒。</p>
+        <p>你的小額付費，是我們令優質內容自食其力的開端，更會是我們優質社群發力的開始。</p>
       </div>
       <hr>
       <div class="plansrow">
         <div class="plan">
           <div class="illustration"><img src="img/illus1.png" alt=""></div>
             <ul class="description">
-
-              <li>端傳媒×獨立書店 <a class="giftlink" id="bsbtn">Super Pass</a></li>
-              <li>優先或免費參加端傳媒舉辦的各類沙龍、論壇、放映會等或會員專屬線下活動</li>
-              <li>加入會員專屬社群，跟端傳媒的編輯或作者交流互動</li>
+              <li>暢讀會員*</li>
+              <li>暢讀全站內容</li>
+              <li><a class="giftlink" id="bsbtn">SuperPass 獨立書店優惠</a></li>
+              <li>端會員通訊</li>
+              <br/>
+              <br/>
+              <br/>
+              *注：暢讀會員支持月付，每月僅需 HK$ 49。
             </ul>
         </div>
         <div class="plan">
           <div class="illustration"><img src="img/illus3.png" alt=""></div>
-
             <ul class="description">
-                <li>享有端Mall購物九折優惠，以及其他合作夥伴不定期提供的折扣或禮券</li>
-                <li>會員訂製福袋一套（頭200位會員限定）</li>
-                <li><a class="giftlink" href="index.html#q1">更多信息</a></li>
+                <li>尊享會員</li>
+                <li>暢讀全站內容</li>
+                <li><a class="giftlink" id="bsbtn">SuperPass 獨立書店優惠</a></li>
+                <li>端會員通訊</li>
+                <li>尊享會員社群</li>
+                <li>尊享會員線上興趣小組</li>
+                <li>端線下活動優先、優惠</li>
+                <li>端旅行、端 Mall 購物折扣</li>
               </ul>
         </div>
       </div>
@@ -219,115 +215,101 @@
       <div class="testrow1">
         <div class="test1">
           <img src="img/quote.svg" alt="">
-          <p class="quote">從未有過一個新成立的新聞網站可以拿到那麼多獎項。</p>
-          <p class="credit">—— 2015年人權新聞獎評審會</p>
+          <p class="quote">現代人用「消費」表達主張，我用「付費」支持端傳媒！這是我第一次付費支持華文新媒體，我們一同找路前行。這一路並不容易，為端傳媒團隊、為兩岸四地禱告，大家一起加油！</p>
+          <p class="credit">—— 讀者 安卓</p>
         </div>
         <div class="test2">
           <img src="img/quote.svg" alt="">
-          <p class="quote">A digital Magazine for all Chinese.</p>
-          <p class="credit">—— Foreign Policy</p>
+          <p class="quote">我是台灣人。從端甫上線開始，我就知道這會是華文世界裡難得一見的有觀點但卻又絲毫不偏頗的難得新聞平台，兩年來端已經成為我最重要的新聞閱讀來源，看著你們從壯志豪情到跌跌撞撞一路走來，曾經當過媒體人的我與其說是感嘆不如說是心疼。知道有你們在，心很安，未來，也請多多指教，給我們你們能給的，我一定與你們同在。端，加油。</p>
+          <p class="credit">—— 讀者 VC</p>
         </div>
       </div>
       <div class="testrow2">
         <div class="test1">
           <img src="img/quote.svg" alt="">
-          <p class="quote">我每天讀著真正意義上的新聞，精神得到了前所未有的滿足...…我不會忘記我想要的自由的生活，我正當年輕，不論付出多少，我會戰勝我的孤獨，得到我的自由......我自己尋覓到了你們，你們給了我一個真實的世界，讓我在真實的感情中喜怒哀樂，不斷成長。</p>
-          <p class="credit">—— 讀者</p>
+          <p class="quote">從半年前吧，對香港媒體頗失去信心。端如一股清流在這渾沌世俗中帶出新視野，激起反思的機會。</p>
+          <p class="credit">—— 讀者 sali</p>
         </div>
         <div class="test2">
           <img src="img/quote.svg" alt="">
-          <p class="quote">感謝你們兌現了諾言，我的華語新聞閱讀體驗真的被刷新！也讓我看到了認真的人還可以有希望！</p>
-          <p class="credit">—— 讀者</p>
+          <p class="quote">翻過牆，是端讓我看見實話和真相。</p>
+          <p class="credit">—— 讀者 素問</p>
         </div>
       </div>
+    </div>
+    <div class="awards">
+      <h2>小額支持端傳媒，支持深度好新聞</h2>
+      <br/>
+      <p>SOPA卓越新聞獎 - 2017年六項大獎、2016年兩項大獎</p>
+      <p>香港攝影記者協會《前線・焦點》 - 2016年三項大獎、2015年五項大獎</p>
+      <p>台灣第十五屆卓越新聞獎 - 國際新聞報導獎</p>
+      <p>人權新聞獎 - 2015年五項大獎</p>
+      <br/>
+      <p>有你的支持，我們才會走得更好、更遠</p>
     </div>
     <div class="content">
     	<div class="qaunit">
     		<div class="question" id="q1">
-    			<p>什麼是「端會員」？</p>
+    			<p>除了 PayPal 和信用卡，是否可以用支付寶或微信支付？</p>
     		</div>
     		<div class="answer">
-    			<p>我們梳理過往經驗，整合自身所長，籌備數月後，正式推出「端會員」計劃。希望藉此回應讀者的需求和互聯網時代的新聞媒體創新趨勢，連結華語世界優質的人文資源，為端的讀者提供更為精細和深入的服務。相比通常傳統意義上的會員計劃，「端會員」更想要創造一個社群，聚集華語世界頭腦最為開放、抱持多元信念的一群人，在這裏進行跨越世代和同溫層的對話。</p>
+    			<p>我們已經在端 Mall 放入會員產品，支持支付寶付款。暢讀會員請點擊這裏，尊享會員請點這裏。若循端 Mall 購買，會籍會成功支付後的 1-2 個工作日生效。抱歉，我們目前尚未開通微信支付。</p>
     		</div>
     		<div class="question" id="q2">
-    			<p>如何加入「端會員」？</p>
+    			<p>成功購買「端會員」後會發生什麼？</p>
     		</div>
     		<div class="answer">
-    			<p>點擊<a class="giftlink" href="https://membership.theinitium.com" target="_blank">「端會員」頁面</a>，立即購買加入。</p>
-    		</div>
-    		<div class="question" id="q3">
-    			<p>「端會員」有哪些權益？</p>
-    		</div>
-    		<div class="answer">
-          <ul>
-    			<li>會員活動特權：每月至少一次，獲得端傳媒舉辦的各類付費活動（沙龍、論壇、讀書會、放映會、旅行）的免費或優先參與資格；</li>
-          <li>僅限會員的端小聚：每月一次，端會員將被邀請跟端傳媒編輯部、撰稿人和華語世界最有影響力的KOL喝咖啡、餐敘，或參加端傳媒年會、內部派對；</li>
-          <li>端傳媒×獨立書店 Super Pass：在港台最重要的獨立書店或人文空間，獲得「端會員」專屬的購書優惠或相關特權；</li>
-          <li>會員專屬社群：加入端傳媒會員社群，結識華語世界最有想法的頭腦，參與跨越同溫層的討論和對話；</li>
-          <li>會員獨家優惠：享有在端Mall購物的九折優惠；不定期享有端傳媒合作夥伴提供的獨家優惠、折扣或入場券；</li>
-          <li>會員福袋：實體會員卡一張；會員訂製帆布袋一個；</li>
-          <li>神秘福利</li>
+    			<ul>
+            <li>收到確認郵件</li>
+            <li>網站和 App 的個人中心頁面顯示會員身分（金色星標）</li>
           </ul>
     		</div>
-    		<div class="question" id="q4">
+    		<div class="question" id="q3">
     			<p>端傳媒×獨立書店 Super Pass 可以在哪些書店使用？</p>
     		</div>
     		<div class="answer">
-    			<p>書店清單和優惠細則在<a class="giftlink" href="https://theinitium.com/article/membership-bookstore-list/" target="_blank">這裏</a>（不斷增長中......）歡迎自薦：membership@theinitium.com</p>
+          <p>書店清單和優惠細則在<a class="giftlink" href="https://theinitium.com/article/membership-bookstore-list/">這裏</a>（不斷增長中……），若您是店家，歡迎來函與我們洽談合作事宜：membership@theinitium.com</p>
+    		</div>
+    		<div class="question" id="q4">
+    			<p>我該如何在合作店家或活動現場認證我的會員身份？</p>
+    		</div>
+    		<div class="answer">
+    			<p>出示電子會員身分識別，即網站和 App 的個人中心頁面中的金色星標</p>
     		</div>
         <div class="question" id="q5">
+          <p>我該怎麼加入「端尊享會員」社群？</p>
+        </div>
+        <div class="answer">
+          <p>加入會員後，我們會聯絡你，邀請你加入我們的Facebook / WhatsApp 社群</p>
+        </div>
+        <div class="question" id="q6">
+          <p>在「端尊享會員」社群裏有什麼？</p>
+        </div>
+        <div class="answer">
+          <p>可以在「端會員」社群裏發帖、跟其他會員交流，參與線上直播或互動。端傳媒的編輯、撰稿人們也將不定期進入社群，跟大家交流；</p>
+          <p>有任何建議、疑問，都可以在社群中留言，「迷你端」將一一回覆</p>
+        </div>
+        <div class="question" id="q7">
           <p>如何獲得活動的優先報名資格？</p>
         </div>
         <div class="answer">
-          <p>「端會員」計劃推出後，會不定期通過郵件和群組向會員發送活動訊息和參與方式。</p>
-        </div>
-        <div class="question" id="q6">
-          <p>可以在「端會員」社群裏做什麼？</p>
-        </div>
-        <div class="answer">
-          <p>可以在「端會員」社群裡發帖、跟其他會員交流，參與線上直播或互動。端傳媒的編輯、撰稿人們也將不定期進入社群，跟大家交流。</p>
-          <p>有任何建議、疑問，都可以在社群中留言，小端將一一回覆。</p>
-        </div>
-        <div class="question" id="q7">
-          <p>成功購買「端會員」後會發生什麼？</p>
-        </div>
-        <div class="answer">
-          <ul>
-          <li>收到確認郵件</li>
-          <li>來自端傳媒主編的一封歡迎信</li>
-          <li>經本人確認後，加入社群</li>
-          <li>訂製會員福袋（10-15個工作日的製作週期）</li>
-          <ul>
+          <p>當我們舉辦活動，會不定期通過郵件和社群向會員發送活動訊息和參與方式</p>
         </div>
         <div class="question" id="q8">
-          <p>我該如何在合作店家或活動現場認證我的會員身份？</p>
+          <p>我住在大陸或海外，該如何參加尊享會員的社群活動呢？</p>
         </div>
         <div class="answer">
-          <p>我們正在加班開發「用戶中心」的會員身份標識，以及製作實體會員卡，待完成後，端會員在合作店家或活動現場展示會員卡或會員電子標識，即可完成認證。目前，端會員可通過「郵箱地址」進行身份識別。</p>
-        </div>
-        <div class="question" id="q8">
-          <p>我住在大陸或海外，該如何參加會員活動呢？</p>
-        </div>
-        <div class="answer">
-          <p>我們舉辦的線下活動或聚會，在當下會以香港、台灣為「主場」。如你在別處而不能到場參加，可以通過文字或直播等線上形式，跟我們的編輯部同事、嘉賓和其他會員進行交流。與此同時，在會員社群裏結識來自整個華語世界的朋友，一起探討和分享，想必也是很難得的體驗。最後，我們會在接下來推出一些專門針對大陸會員的內容服務，敬請期待。</p>
-        </div>
-        <div class="question" id="q8">
-          <p>我是大陸讀者，不知可以用支付寶或微信支付嗎？</p>
-        </div>
-        <div class="answer">
-          <p>目前我們已經開通支付寶付款，歡迎大陸讀者購買。</p>
-        </div>
-        <div class="question" id="q8">
-          <p>我該怎麼加入端會員社群？</p>
-        </div>
-        <div class="answer">
-          <p>加入會員後，我們會跟你取得聯繫。獲得你的同意後，會邀請你加入我們的FB/Wechat會員社群。</p>
+          <p>我們的辦公室設在香港、台灣，所以目前舉辦的線下活動或聚會，會以兩地為主。但我們會盡力為活動安排視頻直播，並且歡迎全球各地的會員通過網路連入，一齊參與。</p>
         </div>
         <div class="question" id="q8">
           <p>還有問題？</p>
         </div>
         <div class="answer">
-          <p>歡迎聯繫我們：membership@theinitium.com</p>
+          <p>歡迎聯繫我們：<a class="giftlink" href="mailto:membership@theinitium.com?Subject=Hello%20Initium" target="_top">membership@theinitium.com</a>，</p>
+            <p>或加我們的客服號「迷你端（Minitium）為好友：
+          </p>
+          <p>Facebook：<a class="giftlink" target="_blank" href="https://www.facebook.com/minitiummeow">https://www.facebook.com/minitiummeow</a></p>
+          <p>微信：minitium</p>
         </div>
     	</div>
     </div>
