--- a/index.html
+++ b/index.html
@@ -96,6 +96,21 @@
         </svg>
         <a href="https://www.facebook.com/sharer.php?s=100&u=https://membership.theinitium.com/" onclick="javascript:window.open(this.href,'','menubar=no,toolbar=no,resizable=yes,scrollbars=no,height=368,width=600'); return false;" title="分享到 facebook" class="facebook"><div id="share_btn"><img src="img/share.svg"></div></a>
       </div>
+      <div class="mask">
+        <div class="basic column">
+          <p class="bold">暢讀會員</p>
+          <p>HK$ 498 一年</p>
+          <p>眾籌特惠：HK$ 385</p>
+          <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">加入會員</a>
+        </div>
+        <div class="premier column">
+          <p class="bold">尊享會員</p>
+          <p>HK$ 998 一年</p>
+          <p>眾籌特惠：HK$ 900</p>
+          <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">加入會員</a>
+        </div>
+      </div>
+      <p class="note">注：眾籌特惠持續至 8 月 6 日，眾籌結束後恢復原價。</p>
     </header>
     <div class="content">
       <div id="bsmodal" class="modal">
@@ -164,10 +179,10 @@
           <h4>端傳媒會員優惠：中文書九折，英文書九五折</h4>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">成為會員</a>
         <p class="price">現正眾籌</p>
-      </div>
+      </div> -->
       <div class="intro">
         <br>
         <p>為了聽音樂，你願意每月支出 50 港幣購買音樂 App 的套餐；為了收看影視劇集，你也會每月花費 500 港幣，買下電視台的高清基本組合。</p>
@@ -206,10 +221,10 @@
               </ul>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">成為會員</a>
         <p class="price">現正眾籌</p>
-      </div>
+      </div> -->
     </div>
     <div class="testimonial">
       <div class="testrow1">
