--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <p>歡迎聯繫我們：<a class="giftlink" href="mailto:membership@theinitium.com?Subject=Hello%20Initium" target="_top">membership@theinitium.com</a>，</p>
             <p>或加我們的客服號「迷你端（Minitium）為好友：
           </p>
-          <p>Facebook：<a class="giftlink" target="_blank" href="https://www.facebook.com/minitiummeow">https://www.facebook.com/minitiummeow</a></p>
+          <p>Facebook：<a class="giftlink" target="_blank" href="http://bit.ly/2stqlgQ">http://bit.ly/2stqlgQ</a></p>
           <p>微信：minitium</p>
         </div>
     	</div>
