change title font

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="plan">
           <div class="illustration"><img src="img/illus1.png" alt=""></div>
             <ul class="description">
-              <li>暢讀會員*</li>
+              <h2 class="bold">暢讀會員*</h2>
               <li>暢讀全站內容</li>
               <li><a class="giftlink" id="bsbtn">SuperPass 獨立書店優惠</a></li>
               <li>端會員通訊</li>
@@ -210,7 +210,7 @@
         <div class="plan">
           <div class="illustration"><img src="img/illus3.png" alt=""></div>
             <ul class="description">
-                <li>尊享會員</li>
+                <h2 class="bold">尊享會員</h2>
                 <li>暢讀全站內容</li>
                 <li><a class="giftlink" id="bsbtn">SuperPass 獨立書店優惠</a></li>
                 <li>端會員通訊</li>
