--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
           <p class="bold">暢讀會員</p>
           <p>HK$ 498 一年</p>
           <p>眾籌特惠：HK$ 385</p>
-          <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">加入會員</a>
+          <a class="subscribe" href="https://theinitium.com/subscription/offers/" target="_blank">加入會員</a>
         </div>
         <div class="premier column">
           <p class="bold">尊享會員</p>
           <p>HK$ 998 一年</p>
           <p>眾籌特惠：HK$ 900</p>
-          <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">加入會員</a>
+          <a class="subscribe" href="https://theinitium.com/subscription/offers/" target="_blank">加入會員</a>
         </div>
       </div>
       <p class="note">注：眾籌特惠持續至 8 月 6 日，眾籌結束後恢復原價。</p>
@@ -132,7 +132,7 @@
           <!-- Book store #2 -->
           <h3>2.Boven 雜誌圖書館</h3>
           <img src="img/boven1.jpg">
-          
+
           <p>台灣首座專屬文創與專業設計之雜誌主題圖書館。</p>
           <p>全球首座雜誌圖書館。Boven現場藏書量約為20,000本，包括歐、美、日..等外文雜誌。舘內挑選全世界超過300種以上的設計、藝術、時尚、攝影雜誌，提供給創意人士靈感來源最重要的養分和精神糧食。</p>
           <p>地址：台北市大安區復興南路一段107巷5弄18號B1</p>
@@ -142,7 +142,7 @@
 
           <!-- Book store #3 -->
           <h3>3.香港郵意明信片航海主題咖啡廳</h3>
-          <img src="img/post.jpg">          
+          <img src="img/post.jpg">
           <p>簡介：主力宣傳Postcrossing文化，收集及展出世界各地郵票和明信片。邀請不同本土設計師和團體合作或自家設計，製作香港特色明信片。在這裏除了可以購買、寄出明信片，客人還可以在 Cafe 中休閒享用各式咖啡和小食。</p>
           <p>地址：灣仔安樂里地下D舖（港鐵銅鑼灣站 A 出口, 步行約10分鐘）</p>
           <p>電話號碼：3702 1078</p>
@@ -151,7 +151,7 @@
 
           <!-- Book store #4 -->
           <h3>4.國風堂書屋(Country wind bookstore)</h3>
-          <img src="img/country.jpg">          
+          <img src="img/country.jpg">
           <p>簡介：外語敎材專門店，兒童敎材專門店。包含英語、日語、韓語、法語/德語/西班牙/俄語、其他語言、兒童、工藝等類別的書籍。 </p>
           <p>地址：九龍旺角西洋菜南街63號 2/F(近旺角地鐵站D3出口)</p>
           <p>電話號碼：2390 7099</p>
@@ -160,8 +160,8 @@
 
           <!-- Book store #5 -->
           <h3>5.北角森記圖書貓貓書店</h3>
-          <img src="img/cat.jpg">      
-          <p class="caption">攝：陳朗熹/端傳媒</p>    
+          <img src="img/cat.jpg">
+          <p class="caption">攝：陳朗熹/端傳媒</p>
           <p>簡介：這裏既是愛書者的尋寶地，也是流浪貓的安樂窩。</p>
           <p>地址：北角英皇道193號英皇中心 地庫19號</p>
           <p>電話號碼：2578 5956</p>c
@@ -170,7 +170,7 @@
 
           <!-- Book store #6 -->
           <h3>6.序言書室</h3>
-          <img src="img/xu.jpg">       
+          <img src="img/xu.jpg">
           <p>簡介：序言書室主要售賣及代訂人文學科及社會科學之中英文學術書籍，包括︰文學、哲學、政治、社會學、歷史、文化研究等。不定期舉辦各項文化活動，如讀書會、座談會、新書發布會等，藉此推動閲讀風氣。</p>
           <p>序言書室作為一間文化學術書店正是要提供一個空間，讓人群聚合，互相激活對人生的感動和思考。希望書室能讓人多一點思索，少一點麻木。</p>
           <p>地址：西洋菜南街68號7字樓</p>
@@ -180,7 +180,7 @@
         </div>
       </div>
       <!-- <div class="row">
-        <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">成為會員</a>
+        <a class="subscribe" href="https://theinitium.com/subscription/offers/" target="_blank">成為會員</a>
         <p class="price">現正眾籌</p>
       </div> -->
       <div class="intro">
@@ -222,7 +222,7 @@
         </div>
       </div>
       <!-- <div class="row">
-        <a class="subscribe" href="https://www.funding.theinitium.com/?utm_medium=buy_button&utm_source=membership.theinitium.com" target="_blank">成為會員</a>
+        <a class="subscribe" href="https://theinitium.com/subscription/offers/" target="_blank">成為會員</a>
         <p class="price">現正眾籌</p>
       </div> -->
     </div>
@@ -329,7 +329,7 @@
     	</div>
     </div>
     <div class="footer">
-      
+
     </div>
   </body>
   <script>
