--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               </ul>
         </div>
       </div>
-      <a class="subscribe dark" href=" https://theinitium.com/subscription/offers/">加入會員</a>
+      <a class="subscribe dark" target="_blank" href=" https://theinitium.com/subscription/offers/">加入會員</a>
       <!-- <div class="row">
         <a class="subscribe" href="https://theinitium.com/subscription/offers/" target="_blank">成為會員</a>
         <p class="price">現正眾籌</p>
