--- a/index.html
+++ b/index.html
@@ -193,12 +193,9 @@
       </div> -->
       <div class="intro">
         <br>
-        <p>2015 年 8 月 3 日，端傳媒上線，那時候特朗普、林鄭月娥、蔡英文尚未當選，英國依然是歐盟的成員，劉曉波還沒有離開我們。</p>
-        <p>兩年裏，我們和你們一起，見證了很多。從天津大爆炸、旺角騷亂到巴黎恐襲，我們奔赴現場；從台灣、香港到美國，我們緊密追蹤每場大選；從 709 律師、宣誓風波到反課綱、同婚平權，我們深入解析事件背後的結構困境。</p>
-        <p>也是這兩年，在你們的見證下，我們經歷了很多。一篇好新聞需要細膩的觀察和精準的分析，但讓一間新聞機構持續生產好新聞，這份事業需要想象力和創造力，也離不開每一位讀者的協力，「自由的道路漫長，我們一齊開端」。</p>
-        <p>成立兩週年，我們收穫過榮耀也經歷過挫敗。</p>
-        <p>以眾籌群募和付費閱讀為新的起點，我們重新出發。</p>
-        <p>你的小額付費，讓好內容得以自證價值，也讓我們共同的事業可以持續，在下一個兩年、十年和更長的時空中為社會創造更多價值。</p>
+        <p>新聞意義的發生土壤，正在於讀者。因為每一位會員的閱讀、分享、轉述，每一篇報道才能實現它的價值和使命。</p>
+        <p>你的付費並不僅僅是獲得了閱讀權限、為已發表的文章買單，你投入的每一分錢我們都會優先用於未來的內容製作。這不是簡單的錢貨買賣關係，未來更多的好新聞，因有你的參與，成為可能。</p>
+        <p>我們常說，「用你選擇的媒體，決定你看到的世界」。此刻，在知識付費的語境下，「每一次你花的錢，都是在為你想要的世界投票。」希望端能夠成為你觀察時代的可靠夥伴，也在未來某天，成為共同社群的參與者，一起砥礪前行。</p>
         <p>你，要一起嗎？</p>
       </div>
       <hr>
