--- a/index.html
+++ b/index.html
@@ -203,14 +203,11 @@
         <div class="plan">
           <div class="illustration"><img src="img/basic.jpg" alt=""></div>
             <ul class="description">
-              <h2 class="bold">暢讀會員*</h2>
+              <h2 class="bold">暢讀會員</h2>
               <li>暢讀全站內容</li>
               <li><a class="giftlink" id="bsbtn">SuperPass 獨立書店優惠</a></li>
               <li>端會員通訊</li>
-              <br/>
-              <br/>
-              <br/>
-              *注：暢讀會員支持月付，每月僅需 HK$ 49。
+              <li>端會員社群</li>
             </ul>
         </div>
         <div class="plan">
@@ -218,9 +215,9 @@
             <ul class="description">
                 <h2 class="bold">尊享會員</h2>
                 <li>暢讀全站內容</li>
-                <li><a class="giftlink" id="bsbtn">SuperPass 獨立書店優惠</a></li>
+                <li><a class="giftlink" id="bsbtn2">SuperPass 獨立書店優惠</a></li>
                 <li>端會員通訊</li>
-                <li>尊享會員社群</li>
+                <li>尊享會員精品小群</li>
                 <li>尊享會員線上興趣小組</li>
                 <li>端線下活動優先、優惠</li>
                 <li>端旅行、端 Mall 購物折扣</li>
@@ -262,39 +259,73 @@
     <div class="awards">
       <h2>小額支持端傳媒，支持深度好新聞</h2>
       <br/>
-      <p>SOPA卓越新聞獎 - 2017年六項大獎、2016年兩項大獎</p>
-      <p>香港攝影記者協會《前線・焦點》 - 2016年三項大獎、2015年五項大獎</p>
-      <p>台灣第十五屆卓越新聞獎 - 國際新聞報導獎</p>
-      <p>人權新聞獎 - 2015年五項大獎</p>
+      <ul class="album">
+        <li class="album-item">
+          <a href="https://theinitium.com/article/20170615-sopa/" class="item-link" target="_blank">
+            <div class="item-cover" style="background-image: url(https://d32kak7w9u5ewj.cloudfront.net/static/img/portfolio/20170615-sopa.jpg)">
+            </div>
+          </a>
+          <a href="https://theinitium.com/article/20170615-sopa/" class="item-name" target="_blank">
+            SOPA卓越新聞獎 - 2017年六項大獎、2016年兩項大獎
+          </a> 
+        </li>
+        <li class="album-item">
+          <a href="https://theinitium.com/article/20170319-photo-hkppa/" class="item-link" target="_blank">
+            <div class="item-cover" style="background-image: url(https://d32kak7w9u5ewj.cloudfront.net/static/img/portfolio/20170319-photo-hkppa.jpg)">
+            </div>
+          </a>
+          <a href="https://theinitium.com/article/20170319-photo-hkppa/" class="item-name" target="_blank">
+            香港攝影記者協會《前線・焦點》 - 2016年三項大獎、2015年五項大獎
+          </a> 
+        </li>
+        <li class="album-item">
+          <a href="https://theinitium.com/article/20161118-taiwan-excellence-news/" class="item-link" target="_blank">
+            <div class="item-cover" style="background-image: url(https://d32kak7w9u5ewj.cloudfront.net/static/img/portfolio/20161118-taiwan-excellence-news.jpg)">
+            </div>
+          </a>
+          <a href="https://theinitium.com/article/20161118-taiwan-excellence-news/" class="item-name" target="_blank">
+            台灣第十五屆卓越新聞獎 - 國際新聞報導獎
+          </a> 
+        </li>
+        <li class="album-item">
+          <a href="https://theinitium.com/article/20160506-human-rights-press-awards/" class="item-link" target="_blank">
+            <div class="item-cover" style="background-image: url(https://d32kak7w9u5ewj.cloudfront.net/static/img/portfolio/20160506-human-rights-press-awards.jpg)">
+            </div>
+          </a>
+          <a href="https://theinitium.com/article/20160506-human-rights-press-awards/" class="item-name" target="_blank">
+            人權新聞獎 - 2015年五項大獎
+          </a> 
+        </li>
+      </ul>
       <br/>
       <p>有你的支持，我們才會走得更好、更遠</p>
     </div>
     <div class="content" id="qa">
-    	<div class="qaunit">
-    		<div class="question" id="q1">
-    			<p>除了 PayPal 和信用卡，是否支持支付寶、微信支付？</p>
-    		</div>
-    		<div class="answer">
-    			<p>慣用支付寶的讀者，可以到跳轉到「端 Mall」上購買年付方案，請點擊「<a class="giftlink" target="_blank" href="https://init.shop/products/basic-vip">暢讀會員</a>」或「<a class="giftlink" target="_blank" href="https://init.shop/products/premium-vip">尊享會員</a>」跳轉至對應方案。循「端 Mall」購買，會籍會在成功支付後的 1-2 個工作日生效，請耐心等待。我們目前尚未開通微信支付。</p>
-    		</div>
-    		<div class="question" id="q2">
-    			<p>是否有線下的支付方式？</p>
-    		</div>
-    		<div class="answer">
-    			<p>身在香港的讀者，可選擇以匯款、支票的方式付費，亦可親臨我們的辦公室以現金購買。請將有效的支票、匯款單據，連同填妥的 <訂閱表格>（ 可聯繫 <a class="giftlink" href="mailto:membership@theinitium.com?Subject=Hello%20Initium" target="_top">membership@theinitium.com</a> 獲取），一併寄給我們即可，地址是：香港北角英皇道663號泓富產業千禧廣場1907室，端傳媒會員組收。</p>
-    		</div>
-    		<div class="question" id="q3">
-    			<p>成功購買「端會員」後會發生什麼？</p>
-    		</div>
-    		<div class="answer">
+      <div class="qaunit">
+        <div class="question" id="q1">
+          <p>除了 PayPal 和信用卡，是否支持支付寶、微信支付？</p>
+        </div>
+        <div class="answer">
+          <p>我們支持支付寶付款。在<a class="giftlink" target="_blank" href="https://theinitium.com/subscription/offers/">選定會員方案</a>後，你可以選擇「支付寶」並會跳轉到「端 Mall」，成功支付後，您會收到<購買確認信>。您的會籍會在 1-2 個工作日生效並收到<生效通知>，請耐心等待。我們目前尚未開通微信支付。</p>
+        </div>
+        <div class="question" id="q2">
+          <p>是否有線下的支付方式？</p>
+        </div>
+        <div class="answer">
+          <p>身在香港或台灣的讀者，可選擇以匯款、支票的方式付費，亦可親臨我們的辦公室以現金購買。請將有效的支票、匯款單據，連同填妥的 <訂閱表格>一併寄給我們即可。訂閱表格和辦公室地址，請聯繫 membership@theinitium.com 獲取。</p>
+        </div>
+        <div class="question" id="q3">
+          <p>成功購買「端會員」後會發生什麼？</p>
+        </div>
+        <div class="answer">
           <p>在主站支付成功後，您的會籍會立即生效；在非主站渠道（含「端 Mall」）支付，會於 收到款項後的 1-2 個工作日內生效會籍；生效時，您會收到確認郵件，並且在「個人中心」頁面顯示會員身份（金色星標），登入狀態下可以暢讀全站內容。</p>
-    		</div>
-    		<div class="question" id="q4">
-    			<p>可以自動續費嗎？</p>
-    		</div>
-    		<div class="answer">
-    			<p>循主站加入的會員，購買的同時會啓動自動續費，並在會籍到期後根據所參與的方案自動扣款，並延續會員。可以到網頁版的「個人中心 - 付費管理」中取消自動續費。非主站購買的會員，無法自動續費，需重新下單。</p>
-    		</div>
+        </div>
+        <div class="question" id="q4">
+          <p>可以自動續費嗎？</p>
+        </div>
+        <div class="answer">
+          <p>循主站加入的會員，購買的同時會啓動自動續費，並在會籍到期後根據所參與的方案自動扣款，並延續會籍。您可以到網頁版的「個人中心 - 付費管理」中取消自動續費。非主站購買的會員，無法自動續費，需重新下單。</p>
+        </div>
         <div class="question" id="q5">
           <p>若我已是會員，可否重新購買、或升級現有方案？</p>
         </div>
@@ -354,9 +385,11 @@
           <p>Facebook：<a class="giftlink" target="_blank" href="http://bit.ly/2stqlgQ">http://bit.ly/2stqlgQ</a></p>
           <p>微信：minitium</p>
         </div>
-    	</div>
+      </div>
     </div>
-    <div class="footer">
+    <!-- <div class="footer">
+
+    </div> -->
 
     </div>
   </body>
@@ -365,8 +398,12 @@
   //modal
   var modal = document.getElementById('bsmodal');
   var btn = document.getElementById('bsbtn');
+  var btn2 = document.getElementById('bsbtn2');
   var span = document.getElementsByClassName("close")[0];
   btn.onclick = function() {
+    modal.style.display = "block";
+  };
+  btn2.onclick = function() {
     modal.style.display = "block";
   };
   span.onclick = function(){
